--- a/escolha_comodo/estilo.css
+++ b/escolha_comodo/estilo.css
@@ -5,8 +5,8 @@ body{
    float:left;
    margin-left: 500px;
    margin-top: 400px;
+   font-family: 'Whereas recognition of the inherent dignity';
   
-   
 }
 
 .escolha{
