--- a/avaliacao/estilo.css
+++ b/avaliacao/estilo.css
@@ -6,3 +6,7 @@
 }.estrelas  input[type=radio]:checked  ~ label i.fa:before{
 	color: #CCC;
 }
+.observacao{
+    margin-left: 100px;
+    margin-right: 100px;
+}
