--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,12 +30,11 @@ body{
     font-family: Open-Sans;
 }
 
-.container-logo {
-    margin-top: 100px;
-    display: flex;
+.bannerprincipal{
+    text-align: center;
+    margin-top: 15%;
 }
 
-.container-logo-conteudo {
-    padding-top: 8%;
-    padding-left: 25%;
+.area-carousel{
+    margin-top: -580px;
 }
