--- a/includes/rodape.html
+++ b/includes/rodape.html
@@ -2,12 +2,11 @@
 <html>
 
 <head>
-    <title>Programador Viking | Rodapé com Botão e Logo</title>
+    <title>Rodape - Wood</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Footer-with-button-logo.css">
 </head>
 
 <body>
@@ -19,39 +18,32 @@
                 <div class="col-sm-3">
                     <h2 class="logo"><a href="index.html"></a><img src="projeto_integrador/includes/imagens/logo.png"></h2>
                 </div>
+
+                <img src="includes/instagram.png">
+                
                 <div class="col-sm-2" style="color: white;">
                     <h5>Inicio</h5>
                     <ul>
-                        <li><a href="https://programadorviking.com.br/">Home</a></li>
-                        <li><a href="https://bit.ly/front-end-curso-completo-promocao-01">Cursos</a></li>
-                        <li><a href="https://programadorviking.com.br/">Downloads</a></li>
+                        <li><a href="projeto_integrador/index.html">Página Inicial</a></li>
+                        <li><a href="">Galeria</a></li>
+                        <li><a href="rascunho/rascunho.html">Rascunhos</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2" style="color: white;">
-                    <h5>Sobre-nós</h5>
+                    <h5>Serviços</h5>
                     <ul>
-                        <li><a href="https://programadorviking.com.br/">Informações da Empresa</a></li>
-                        <li><a href="https://programadorviking.com.br/">Contato</a></li>
-                        <li><a href="https://programadorviking.com.br/">Blog</a></li>
+                        <li><a href="paleta/index.html">Paleta de cores</a></li>
+                        <li><a href="">Encomendar</a></li>
+                        <li><a href="">Termos e condições de uso</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-2" style="color: white;">
                     <h5>Suporte</h5>
                     <ul>
-                        <li><a href="https://programadorviking.com.br/">FAQ</a></li>
-                        <li><a href="https://programadorviking.com.br/">Telefones</a></li>
-                        <li><a href="https://programadorviking.com.br/">Chat</a></li>
+                        <li><a href="">Central de dúvidas</a></li>
+                        <li><a href="">Telefones</a></li>
+                        <li><a href="">Chat</a></li>
                     </ul>
-                </div>
-                <div class="col-sm-3" style="color: white;">
-                    <div class="social-networks">
-                        <a href="https://programadorviking.com.br/" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="https://programadorviking.com.br/" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="https://programadorviking.com.br/" class="instagram"><i class="fa fa-instagram"></i></a>
-                    </div>
-                    <a href="https://programadorviking.com.br/">
-                        <button type="button" class="btn btn-default">Contato</button>
-                    </a>
                 </div>
             </div>
         </div>
@@ -59,8 +51,5 @@
             <p style="background-color: white; text-align: center;">© 2022 Copyright - Wood</p>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
-
 </html>
